[package]
name = "hackernews"
version = "0.1.0"
authors = ["TeamMeng <862915265@qq.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
chrono = { version = "0.4.38", features = ["serde"] }
dioxus = { version = "0.5", features = ["web", "router"] }
dioxus-logger = "0.5.1"
futures = "0.3.30"
reqwest = { version = "0.12.7", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0.210", features = ["derive"] }
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
